--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@types/express": "^4.17.12",
     "@types/jasmine": "^3.7.7",
     "@types/node": "^15.12.2",
+    "@types/sharp": "^0.28.3",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
@@ -10,11 +12,13 @@
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
+    "supertest": "^6.1.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "jasmine": "^3.7.0",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
@@ -30,7 +34,7 @@
     "start": "nodemon src/index.ts",
     "build": "npx tsc",
     "lint": "eslint . --ext .ts",
-    "prettier": "prettier --config .prettierrc --write **/*.ts"
+    "prettier": "prettier --config .prettierrc --write ."
   },
   "repository": {
     "type": "git",
